--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
+<!DOCTYPE html>
 <html>
+<head>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
+</head>
 <body>
     <div id="mapdiv"></div>
     <script src="http://www.openlayers.org/api/OpenLayers.js"></script>
     <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
     <script>
                 
         // $.getJSON('./mydata.json', function(data) {
